--- a/index.html
+++ b/index.html
@@ -76,11 +76,18 @@
       <li>Workshop Registration: Strictly via website (limited seats)</li>
     </ul>
     
-    <h2 class="section-title">Abstract and Registration</h2>
-    <ul>
-      <li>Abstract Submission :https://forms.gle/iqKsgTpGVb3TQs2FA </li>
-      <li>Registration:https:https://forms.gle/9ASC93GHyrRMAQzU9 </li>
-    </ul>
+<h2 class="section-title">Abstract and Registration</h2>
+<ul>
+  <li>
+    Abstract Submission:
+    <a href="https://forms.gle/iqKsgTpGVb3TQs2FA" target="_blank">https://forms.gle/iqKsgTpGVb3TQs2FA</a>
+  </li>
+  <li>
+    Registration:
+    <a href="https://forms.gle/9ASC93GHyrRMAQzU9" target="_blank">https://forms.gle/9ASC93GHyrRMAQzU9</a>
+  </li>
+</ul>
+
     
     <h2 class="section-title">Contact</h2>
     <p>Email: bioconverge2025@gmail.com</p>
