--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 <h4><span class="badge bg-primary">International</span></h4>
 <ul>
   <li><strong>Dr. Amit Khanna</strong> – Staff Scientist, USA, Ultima Genomics</li>
-  <li><strong>Dr. Sandeep Singh, PhD</strong> – Principal Research Scientist, University of Texas MD Anderson Cancer Center, Houston, Texas, USA</li>
+  <li><strong>Dr. Sandeep Singh,</strong> – Principal Research Scientist, University of Texas MD Anderson Cancer Center, Houston, Texas, USA</li>
   <li><strong>Dr. Amaladoss Anburaj</strong> – Senior Scientist, School of Applied Science, Temasek Polytechnic, Singapore</li>
   <li><strong>Dr. Deepak B. Thimiri GovindaRaj</strong> – Centre Manager (CSIR), South Africa</li>
-  <li><strong>Dr. Yashika Rustagi, PhD</strong> – Senior Scientist, Group Lead, Centre for Cancer Genomics, Dana Farber Cancer Institute / Harvard Medical School, Boston</li>
+  <li><strong>Dr. Yashika Rustagi,</strong> – Senior Scientist, Group Lead, Centre for Cancer Genomics, Dana Farber Cancer Institute / Harvard Medical School, Boston</li>
   <li><strong>Kumar Selvarajoo</strong> - Senior Principal Investigator at Bioinformatics Institute, A*STAR</li>
+  <li><strong> Dr. Rajesh K Sani</strong> - Professor, South Dakota Mines and Director, MASON (Multiomics And Synthetic biOlogy ceNter), South Dakota, USA</li>
 </ul>
 
 <h4><span class="badge bg-secondary">National</span></h4>
@@ -62,6 +63,7 @@
   <li><strong>Dr. Vijay Khonde</strong>- Senior Staff Scientist, Praj Industries, Pune, Maharashtra, India</li>
   <li><strong>Prof. Dr. P. Chandrakumar</strong>- Dean of industry relations / TBI and Associate Professor,Vel Tech Rangarajan Dr. Sagunthala R&D Institute of Science and Technology.</li>
   <li><strong>Prof. Mugesh Sankaranarayanan</strong> - Professor (Research), Head- Centre for Metabolic Engineering and Synthetic Biology, Vel Tech Rangarajan Dr. Sagunthala R&D Institute of Science and Technology</li>
+  <li><strong>Dr. Shashi Kumar Rhode</strong> - Group leader, Metabolic Engineering, International Centre for Genetic Engineering and Biotechnology, New Delhi, India</li>
 </ul>
 
 
