--- a/index.html
+++ b/index.html
@@ -90,7 +90,13 @@
   </li>
 </ul>
 
-    
+<h2 class="section-title">Conference Flyer</h2>
+<p>
+  <a href="https://drive.google.com/uc?export=download&id=1fV52a4Rc1ZyE29pTJcAWhrHdbErN-rLt" class="btn btn-danger" download>
+    📄 Download Conference Flyer
+  </a>
+</p>
+
     <h2 class="section-title">Contact</h2>
     <p>Email: bioconverge2025@gmail.com</p>
     <p>Dr. Kapila Kumar – 9910303402</p>
